update font for quotes and test fix for hover state on ios using onclick event

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -16,13 +16,15 @@
 .featured {
   background: #fffff9;
   blockquote {color: $grey-color; padding: 0 4rem;}
-  blockquote:before, blockquote:after {position: absolute; font-size: $mega-font-size; font-family: initial;
+  blockquote:before, blockquote:after {position: absolute; font-size: $mega-font-size; font-family: 'IM Fell French Canon SC', serif;
+;
   }
   blockquote:before {content:open-quote; left:0; top:-1.6875rem;}
   blockquote:after {content:close-quote; right:0; bottom:-3.5625rem;}
   @include for-tablet-landscape-up {
     blockquote:before {top: -2.3rem;}
     blockquote:after {bottom:-4.2rem;}
+
   }
   .byline {
     margin-top: 1rem;
